--- a/UI/drawingboard/src/App.css
+++ b/UI/drawingboard/src/App.css
@@ -9,7 +9,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(15px + 2vmin);
   color: white;
 }
 
@@ -25,12 +25,12 @@
   border: 1px solid #179e2d
 }
 
-
 .button{
   display:inline-block;
   padding:1em 10em;
   border:0.1em solid #beebba;
-  margin:0em 30em 0.3em 0;
+  float: right;
+  margin: 0 0 0 5em;
   border-radius:0em;
   box-sizing: border-box;
   text-decoration:none;
@@ -52,4 +52,42 @@
   margin:0.4em auto;
   }
   }
+
+.prompt{
+  text-align: center;
+  font-size: 2.5em;
+  margin-bottom: 5em;
+  margin-top: 50em;
+  line-height: 0;
+  text-decoration: none;
+  color: #179e2d;
+  font-family: "Press Start 2P";
+  animation: neon4 1.5s ease-in-out infinite alternate;
+}
+
+@keyframes neon4 {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #b6ff00,
+      0 0 70px #b6ff00, 0 0 80px #b6ff00, 0 0 100px #b6ff00, 0 0 150px #b6ff00;
+  }
+  to {
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #b6ff00,
+      0 0 35px #b6ff00, 0 0 40px #b6ff00, 0 0 50px #b6ff00, 0 0 75px #b6ff00;
+  }
+}
+
+.timer{
+  display:inline-block;
+  padding:1em 10em;
+  border:0.1em solid #beebba;
+  margin:0em 15em 0.3em 0;
+  border-radius:0em;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-family:'Roboto',sans-serif;
+  font-size: 20px;
+  color:rgb(10, 10, 10);
+  text-align:center;
+  transition: all 0.2s;
+}
 
