--- a/UI/drawingboard/src/App.css
+++ b/UI/drawingboard/src/App.css
@@ -25,35 +25,35 @@
   border: 1px solid #179e2d
 }
 
-.button{
-  display:inline-block;
-  padding:1em 10em;
-  border:0.1em solid #beebba;
+.button {
+  display: inline-block;
+  padding: 1em 10em;
+  border: 0.1em solid #beebba;
   float: right;
   margin: 0 0 0 5em;
-  border-radius:0em;
+  border-radius: 0em;
   box-sizing: border-box;
-  text-decoration:none;
-  font-family:'Roboto',sans-serif;
+  text-decoration: none;
+  font-family: 'Roboto', sans-serif;
   font-size: 20px;
-  color:rgb(10, 10, 10);
-  text-align:center;
+  color: rgb(10, 10, 10);
+  text-align: center;
   transition: all 0.2s;
-  }
+}
 
-  button:hover{
-  color:rgb(10, 10, 10);
-  background-color:#d3fab3;
-  }
+button:hover {
+  color: rgb(10, 10, 10);
+  background-color: #d3fab3;
+}
 
-  @media all and (max-width:30em){
-  button{
-  display:block;
-  margin:0.4em auto;
+@media all and (max-width:30em) {
+  button {
+    display: block;
+    margin: 0.4em auto;
   }
-  }
+}
 
-.prompt{
+.prompt {
   text-align: center;
   font-size: 2.5em;
   margin-bottom: 5em;
@@ -70,24 +70,41 @@
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #b6ff00,
       0 0 70px #b6ff00, 0 0 80px #b6ff00, 0 0 100px #b6ff00, 0 0 150px #b6ff00;
   }
+
   to {
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #b6ff00,
       0 0 35px #b6ff00, 0 0 40px #b6ff00, 0 0 50px #b6ff00, 0 0 75px #b6ff00;
   }
 }
 
-.timer{
-  display:inline-block;
-  padding:1em 10em;
-  border:0.1em solid #beebba;
-  margin:0em 15em 0.3em 0;
-  border-radius:0em;
+.timer {
+  display: inline-block;
+  padding: 1em 10em;
+  border: 0.1em solid #beebba;
+  margin: 0em 15em 0.3em 0;
+  border-radius: 0em;
   box-sizing: border-box;
-  text-decoration:none;
-  font-family:'Roboto',sans-serif;
+  text-decoration: none;
+  font-family: 'Roboto', sans-serif;
   font-size: 20px;
-  color:rgb(10, 10, 10);
-  text-align:center;
+  color: rgb(10, 10, 10);
+  text-align: center;
   transition: all 0.2s;
 }
 
+.stopbackground {
+  background-color: orange;
+}
+
+.stop {
+  font-size: 5em;
+  color: white;
+  text-align: center;
+  /* min-height: 10vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 10em;
+  color: white; */
+}
